# sando

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.cursor/rules/: entrypoint.mdc
.direnv/: flake-profile-1-link
migrations/: 001_create_connections_table.sql  002_add_port_to_connections.sql  003_add_subdomain_to_connections.sql
src/: main.rs  models.rs
src/components/: connections_list.rs  home_page.rs  mod.rs  payment_page.rs  status_page.rs
src/routes/: connections.rs  index.rs  mod.rs  proxy.rs  submit.rs
static/: ASSETS.md  browserconfig.xml  manifest.json  styles.css
