[package]
name = "sando"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
maud = { version = "0.27.0", features = ["axum"] }
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.124"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.11.27", features = ["json"] }
tower = { version = "0.4.13", features = ["util"] }
http = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
url = "2.5.2"
hex = "0.4.3"
rand = "0.8.5"
cdk = { version = "0.11.0", features = ["wallet"] }
bip39 = { version = "2.1.0", features = ["rand"] }
# Temporarily commented out due to libsqlite3-sys conflicts with SQLx
# cdk-sqlite = { version = "0.11.0" }
pingora = { version = "0.5.0", default-features = false, features = ["proxy"] }
pingora-core = "0.5.0"
pingora-http = "0.5.0"
pingora-proxy = "0.5.0"
home = "0.5.9"
nostr-sdk = "0.38.0"
async-trait = "0.1.83"
config = "0.14.1"